@@ -115,6 +115,7 @@ version ? (????-??-??):
   - fix validation data in domains for DKIM [red]
   - added management urls for netdevices [chilan]
   - customersearch: we can search customers by tariff [ceho]
+  - cashimportparser.php: fixed problem with long customername and description [ceho]
 
 version 1.11.13 Dira (2011-04-07)
 
